--- a/CompanyManagement/appsettings.json
+++ b/CompanyManagement/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CompanyManagementDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,5 @@
   },
   "AllowedHosts": "*"
 }
+
+
