--- a/CompanyManagement/appsettings.json
+++ b/CompanyManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CompanyManagementDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=CompanyManagementDb;User Id=sa;Password=StrongPass!123;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
