--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -5,22 +5,27 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+	<PreserveCompilationContext>true</PreserveCompilationContext>
+	  <DisableAppDomain>true</DisableAppDomain>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CompanyManagement.Application\CompanyManagement.Application.csproj" />
     <ProjectReference Include="..\CompanyManagement.Domain\CompanyManagement.Domain.csproj" />
     <ProjectReference Include="..\CompanyManagement.Infrastructure\CompanyManagement.Infrastructure.csproj" />
+    <ProjectReference Include="..\CompanyManagement\CompanyManagement.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
