--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,11 @@ version: "3.9"
 
 services:
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: companymanagement-sql
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: sqlserver
+    hostname: sqlserver
     environment:
       ACCEPT_EULA: "Y"
-      SA_PASSWORD: "StrongPassword123!"
+      MSSQL_SA_PASSWORD: "yourStrong(!)Password"
     ports:
       - "1433:1433"
-    volumes:
-      - sql_data:/var/opt/mssql
-    healthcheck:
-      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P StrongPassword123! -Q "SELECT 1"
-      interval: 10s
-      timeout: 5s
-      retries: 10
-
-volumes:
-  sql_data:
